--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -14,20 +14,25 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+  {{ serviceName }}
 {% endblock %}
 
 <!-- Edit the header -->
 <!-- Header code examples can be found at https://service-manual.nhs.uk/design-system/components/header -->
 {% block header %}
-  {{ header({
+  {{ header(
+    
+    {
     "service": {
-        "name": "Prototype kit",
+        "name": serviceName,
         "href": "/"
       },
       "showNav": "false",
       "showSearch": "false"
-    })
+    }
+    
+    
+    )
   }}
 {% endblock %}
 
