--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,7 +12,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+NHS.UK prototype kit
 {% endblock %}
 
 <!-- For adding a breadcrumb or back link -->
@@ -24,59 +24,64 @@
 <!-- For adding page content -->
 <!-- Page layout code can be found at https://service-manual.nhs.uk/design-system/styles/layout -->
 {% block content %}
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-full-width">
 
-      <!-- Change the page title here -->
-      <h1>
-        NHS.UK prototype kit
-        <span class="nhsuk-caption-xl nhsuk-caption--bottom">Version {{version}}</span>
-      </h1>
+    <!-- Change the page title here -->
+    <h1>
+      Exemption Checker
+      <span class="nhsuk-caption-xl nhsuk-caption--bottom">Version 1.0</span>
+    </h1>
 
-      <!-- Add your content here -->
-      <!-- Styles and components can be found at https://service-manual.nhs.uk/design-system -->
+    {% from 'tabs/macro.njk' import tabs %}
+    {% from 'tables/macro.njk' import table %}
 
-      <p class="nhsuk-lede-text">
-        This kit lets you rapidly create HTML prototypes of NHS services.
-      </p>
+    {% from 'tabs/macro.njk' import tabs %}
+    {% from 'tables/macro.njk' import table %}
 
-      <hr>
 
-      <h2>
-        About this page
-      </h2>
+    {% from 'tabs/macro.njk' import tabs %}
+    {% from 'tables/macro.njk' import table %}
 
-      <p>
-        Use this page as the index for your project.
-      </p>
 
-      <p>
-        You'll find the code for this page at <strong>/app/views/index.html</strong>.
-      </p>
+    {% set exemptionCheckerPrototype %}
 
-      <p>
-        There is also an <a href="/page-example">example page</a>, which contains a selection of NHS.UK frontend styles and components and some <a href="/docs/page-templates">page templates</a>.
-      </p>
+    {{ button({
+    text: "Latest prototype v1.0",
+    href: '/v1/start'
+    }) }}
 
-      <hr>
+    {% endset -%} {% set researchPrototype %}
 
-      <h2>
-        Get started
-      </h2>
+    {% from 'button/macro.njk' import button %}
 
-      <p>Get started by using the:</p>
+    {{ button({
+    text: "Save and continue"
+    }) }}
+    {% endset -%}
 
-      <ul>
-        <li>
-          <a href="https://prototype-kit.service-manual.nhs.uk/how-tos">how to guides</a>
-        </li>
-        <li>
-          code snippets for styles and components from the <a href="https://service-manual.nhs.uk/design-system">NHS digital service manual</a>
-        </li>
-      </ul>
+    {{ tabs({
+    items: [
+    {
+    label: "Exemption checker prototype",
+    id: "exemptionCheckerPrototype",
+    panel: {
+    html: exemptionCheckerPrototype
+    }
+    },
 
-      <!-- End of content -->
 
-    </div>
+    {
+    label: "Research Prototype",
+    id: "researchPrototype",
+    panel: {
+    html: researchPrototype
+    }
+    }
+    ]
+    }) }}
+    <!-- End of content -->
+
   </div>
+</div>
 {% endblock %}
