--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -9,3 +9,10 @@
 // Add your custom CSS/Sass styles below...
 ///////////////////////////////////////////
   
+.done-panel {
+    background-color: #005EB8;
+    text-align: center;
+    color: white;
+    padding: 20px;
+    margin: 0px 0px 30px 0px;
+  }
