Updating after session.

--- a/app/views/v1/date-of-birth.html
+++ b/app/views/v1/date-of-birth.html
@@ -37,7 +37,8 @@ href: 'javascript:history.back();'
             items: [
             {
             name: 'day',
-            classes: 'nhsuk-input--width-2'
+            classes: 'nhsuk-input--width-2',
+            value: data.dateOfBirth.day
             },
             {
             name: 'month',
