--- a/app/views/v1/postcode.html
+++ b/app/views/v1/postcode.html
@@ -37,8 +37,8 @@ href: 'javascript:history.back();'
       text: "Postcode"
       },
       classes: "nhsuk-input--width-10",
-      id: "address-postcode",
-      name: "address-postcode"
+      id: "addressPostcode",
+      name: "addressPostcode"
       }) }}
 
       {% endcall %}
