--- a/app/views/v1/name.html
+++ b/app/views/v1/name.html
@@ -33,21 +33,23 @@ href: 'javascript:history.back();'
       }) %}
 
       {{ input({
-      label: {
-      text: "First name"
-      },
-      classes: "nhsuk-u-width-two-thirds",
-      id: "first-name",
-      name: "first-name"
+        label: {
+        text: "First name"
+        },
+        classes: "nhsuk-u-width-two-thirds",
+        id: 'firstName',
+        name: 'firstName',
+        value: data.firstName
       }) }}
 
       {{ input({
-      label: {
-      text: "Last name"
-      },
-      classes: "nhsuk-u-width-two-thirds",
-      id: "last-name",
-      name: "last-name"
+        label: {
+        text: "Last name"
+        },
+        classes: "nhsuk-u-width-two-thirds",
+        id: 'lastName',
+        name: 'lastName',
+        value: data.lastName
       }) }}
 
       {% endcall %}
