--- a/app/views/v1/no-record-found.html
+++ b/app/views/v1/no-record-found.html
@@ -1,16 +1,14 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-{{ serviceName }}
+  {{ serviceName }}
 {% endblock %}
 
 {% block beforeContent %}
-
-{{ backLink({
-text: 'Go back',
-href: 'javascript:history.back();'
-}) }}
-
+  {{ backLink({
+    text: 'Go back',
+    href: 'javascript:history.back();'
+  }) }}
 {% endblock %}
 
 
@@ -19,66 +17,57 @@ href: 'javascript:history.back();'
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <h1 class="nhsuk-heading-xl">
-      We cannot match you to our records
-    </h1>
-    <h2 class="nhsuk-heading-m">The details you gave:</h2>
-
-    <!-- Summary List -->
-    {% from "summary-list/macro.njk" import summaryList %}
+    <h1 class="nhsuk-heading-xl">We cannot match you to our records</h1>
+    <p class="nhsuk-heading-m">The details you gave:</p>
 
     {{ summaryList({
     rows: [
     {
-    key: {
-    text: "Name"
-    },
-    value: {
-    text: data.firstName + ' ' + data.lastName
-    },
-    actions: {
-    items: [
-    {
-    href: "name",
-    text: "Change",
-    visuallyHiddenText: "name"
-    }
-    ]
-    }
+      key: {
+        text: 'Name'
+      },
+      value: {
+        text: '' | processName()
+      },
+      actions: {
+        items: [{
+            href: 'name',
+            text: 'Change',
+            visuallyHiddenText: 'name'
+          }]
+      }
     },
     {
-    key: {
-    text: "Date of birth"
-    },
-    value: {
-    text: "15 March 1984"
-    },
-    actions: {
-    items: [
-    {
-    href: "date-of-birth",
-    text: "Change",
-    visuallyHiddenText: "date of birth"
-    }
-    ]
-    }
+      key: {
+        text: 'Date of birth'
+      },
+      value: {
+        text: '' | processDateOfBirth()
+      },
+      actions: {
+        items: [{
+            href: 'date-of-birth',
+            text: 'Change',
+            visuallyHiddenText: 'date of birth'
+          }]
+      }
     },
     {
-    key: {
-    text: "Postcode"
-    },
-    value: {
-    html: 'NE11 7RS'
-    },
-    actions: {
-    items: [
-    {
-    href: "postcode",
-    text: "Change",
-    visuallyHiddenText: "contact details"
-    }
-    ]
-    }
+      key: {
+        text: 'Postcode'
+      },
+      value: {
+        text: data.addressPostcode
+      },
+      actions: {
+        items: [
+          {
+            href: 'postcode',
+            text: 'Change',
+            visuallyHiddenText: 'contact details'
+          }
+        ]
+      }
     }
     ]
     }) }}
@@ -86,37 +75,29 @@ href: 'javascript:history.back();'
     <!-- Details expanders -->
     <h2 class="nhsuk-heading-l">We cannot find you for one of these reasons:</h2>
 
-    {% from 'details/macro.njk' import details %}
 
     {{ details({
-    text: "The details you gave do not match our records",
-    HTML: "
-    <p>If you have recently moved or changed your name, we may have your old information.
-      Change
-      your details then try again.</p>
-    <p>If you've never had an exemption from paying NHS costs, we won't have your details.</p>
-    "
+      text: 'The details you gave do not match our records',
+      HTML: '<p>If you have recently moved or changed your name, we may have your old information. Change your details then try again.</p><p>If you\'ve never had an exemption from paying NHS costs, we won\'t have your details.</p>'
     }) }}
-    <!-- ----------- -->
+   
+
     {{ details({
-    text: 'You\'ve recently become entitled to help with NHS costs',
-    HTML: '<p>We may not have all your details yet. Our records can take up to 6 weeks to update.</p>'
+      text: 'You\'ve recently become entitled to help with NHS costs',
+      HTML: '<p>We may not have all your details yet. Our records can take up to 6 weeks to update.</p>'
     }) }}
-    <!-- ----------- -->
+   
     {{ details({
       text: 'You\'re no longer entitled to help with NHS costs',
       HTML: '<p>Your eligibility for free NHS treatment may have ended.</p>'
     }) }}
 
-    <!-- ----------- -->
     
     {{ details({
       text: 'Your prescription prepayment certificate (PPC) has expired',
       HTML: '<p>You can <a target="_blank" class="nhsuk-link" href="https://buy-prescription-prepayment-certificate.nhsbsa.nhs.uk/start">buy another PPC online.</a> <span>(Opens in a new tab)</span></p><p>A PPC lets you get as many NHS prescriptions as you need for a set price. If you regularly pay prescription charges, a PPC could save you money.</p>'
     }) }}
 
-
-    <!-- ----------- -->
     {{ details({
       text: 'You have a hormone replacement therapy prescription prepayment certificate (HRT PPC)',
       HTML: '<p>Our NHS exemption checker service cannot currently check for an HRT PPC exemption. We aim to change this in the future.</p>'
@@ -130,22 +111,15 @@ href: 'javascript:history.back();'
       href: '/v1/start'
     }) }}
 
-    <!-- <span class="nhsuk-u-visually-hidden"> (Opens in a new tab)</span> -->
 
-
-    <div class="nhsuk-form-group">
-      <h3 class="nhsuk-heading-s">Help us improve this service</h3>
-
-      <p class="nhsuk-body"><a class="nhsuk-link" href="https://online1.snapsurveys.com/check-my-nhs-exemption-feedback"
-          id="finished-survey" target="_blank" rel="noopener">What did you think of this service?<span
-            class="nhsuk-u-visually-hidden"> (Opens in a new tab)</span></a> (Takes 30 seconds)</p>
-    </div>
-
-    {% from 'action-link/macro.njk' import actionLink %}
+    <h3 class="nhsuk-heading-s">Help us improve this service</h3>
+    <p class="nhsuk-body"><a class="nhsuk-link" href="https://online1.snapsurveys.com/check-my-nhs-exemption-feedback" id="finished-survey" target="_blank" rel="noopener">What did you think of this service?<span class="nhsuk-u-visually-hidden"> (Opens in a new tab)</span></a> (Takes 30 seconds)</p>
+ 
+    <hr class="nhsuk-section-break" />
 
     {{ actionLink({
-    text: "Check again",
-    href: "/v1/start"
+      text: 'Check again',
+      href: '/v1/start'
     }) }}
 
 
