--- a/app/views/v1/record-found.html
+++ b/app/views/v1/record-found.html
@@ -1,14 +1,14 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-  {{ serviceName }}
+{{ serviceName }}
 {% endblock %}
 
 {% block beforeContent %}
-  {{ backLink({
-    text: 'Go back',
-    href: 'javascript:history.back();'
-  }) }}
+{{ backLink({
+text: 'Go back',
+href: 'javascript:history.back();'
+}) }}
 {% endblock %}
 
 {% block content %}
@@ -26,46 +26,49 @@
     </div>
 
     {{ summaryList({
-    rows: [ 
-    { 
-      key: {
-        text: 'Full name'
-      },
-      value: {
-        html: '' | processName()
-      }
+    rows: [
+    {
+    key: {
+    text: 'Full name'
+    },
+    value: {
+    html: '' | processName()
+    }
     },
     {
-      key: {
-        text: 'Date of birth'
-      },
-      value: {
-        text: '' | processDateOfBirth()
-      }
+    key: {
+    text: 'Date of birth'
+    },
+    value: {
+    text: '' | processDateOfBirth()
+    }
     },
     {
-      key: {
-        text: 'Exempt from paying'
-      },
-      value: {
-        html: '<ul class="nhsuk-list"><li>NHS prescriptions</li><li>NHS dental check-ups and treatment</li></ul>'
-      }
+    key: {
+    text: 'Exempt from paying'
+    },
+    value: {
+    html: '<ul class="nhsuk-list">
+      <li>NHS prescriptions</li>
+      <li>NHS dental check-ups and treatment</li>
+    </ul>'
+    }
     },
     {
-      key: {
-        text: 'End date'
-      },
-      value: {
-        text: 6 | alterTodaysDateByNumberOfMonths
-      }
+    key: {
+    text: 'End date'
+    },
+    value: {
+    text: 6 | alterTodaysDateByNumberOfMonths
+    }
     },
     {
-      key: {
-        text: 'Today\'s date'
-      },
-      value: {
-        text: 0 | alterTodaysDateByNumberOfMonths
-      }
+    key: {
+    text: 'Today\'s date'
+    },
+    value: {
+    text: 0 | alterTodaysDateByNumberOfMonths
+    }
     }
     ]
     }) }}
@@ -75,7 +78,8 @@
     <h2 class="nhsuk-heading-l">How to get your help</h2>
 
     <h3 class="nhsuk-heading-m">Collecting prescriptions</h3>
-    <p class="nhsuk-body">Pharmacy staff will ask for your exemption details. If you do not have them with you, your pharmacist should tick 'Evidence not seen' on the prescription. They will not charge you.</p>
+    <p class="nhsuk-body">Pharmacy staff will ask for your exemption details. If you do not have them with you, your
+      pharmacist should tick 'Evidence not seen' on the prescription. They will not charge you.</p>
     <p class="nhsuk-body">You can show this page as proof today.</p>
 
     <h3 class="nhsuk-heading-m">Dental check-ups and treatment</h3>
@@ -84,25 +88,26 @@
 
     <ul class="nhsuk-list nhsuk-list--bullet">
       <li>have a valid HC2 certificate</li>
-      <li>have a valid tax credit exemption certificate</li>
       <li>are pregnant</li>
       <li>have had a baby in the last 12 months</li>
     </ul>
 
     <p class="nhsuk-body">Your dentist may ask to see proof of your entitlement.</p>
     <p class="nhsuk-body">You can show this page as proof today.</p>
-    <p class="nhsuk-body">Find out what <a href="#">help you can get for dental treatment if you have a maternity exemption certificate</a></p>
+    <p class="nhsuk-body">Find out what <a href="#">help you can get for dental treatment if you have a maternity
+        exemption certificate</a></p>
 
     <p class="nhsuk-body"><a href="#">Print this</a></p>
 
     <h2 class="nhsuk-heading-l">Help us improve this service</h2>
-    <p class="nhsuk-body"><a href="https://online1.snapsurveys.com/check-my-nhs-exemption-feedback">What did you think of this service?</a> (Takes 30 seconds)</p>
+    <p class="nhsuk-body"><a href="https://online1.snapsurveys.com/check-my-nhs-exemption-feedback">What did you think
+        of this service?</a> (Takes 30 seconds)</p>
 
     <hr class="nhsuk-section-break" />
 
     {{ actionLink({
-      text: 'Check again',
-      href: 'start'
+    text: 'Check again',
+    href: 'start'
     }) }}
 
 
