update matex check link

--- a/app/views/v1/record-found.html
+++ b/app/views/v1/record-found.html
@@ -94,7 +94,7 @@ href: 'javascript:history.back();'
 
     <p class="nhsuk-body">Your dentist may ask to see proof of your entitlement.</p>
     <p class="nhsuk-body">You can show this page as proof today.</p>
-    <p class="nhsuk-body">Find out what <a href="#">help you can get for dental treatment if you have a maternity
+    <p class="nhsuk-body">Find out what <a href="https://www.nhsbsa.nhs.uk/check-if-you-have-nhs-exemption/maternity-exemption-certificates">help you can get for dental treatment if you have a maternity
         exemption certificate</a></p>
 
     <p class="nhsuk-body"><a href="#">Print this</a></p>
