Updating the v1 start link so it doesn't get overwritten by the recordNotFound route...

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,7 +41,7 @@ NHS.UK prototype kit
 
       {{ button({
         text: 'Latest prototype v1.0',
-        href: '/v1/start'
+        href: '/v1/start?userRecordFound=true'
       }) }}
 
       <p class="nhsuk-body"><a href="/v1/start?userRecordFound=false">Latest prototype v1.0 - "No record found" route</a></p>
